--- a/courses.html
+++ b/courses.html
@@ -141,20 +141,20 @@
                                     <a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown"
                                         href="#">Sub-Categories</a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="shop-grid.html">Professonal Development</a>
+                                        <li><a class="dropdown-item" href="shop-grid.html">Professional Development</a>
                                         </li>
                                         <li><a class="dropdown-item" href="shop-single.html">Information Technology</a>
                                         </li>
                                         <li><a class="dropdown-item" href="shop-single.html">Designs and
                                                 Web-Development</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="shop-cart.html">Human & Project Managment</a>
+                                        <li><a class="dropdown-item" href="shop-cart.html">Human & Project Management</a>
                                         </li>
                                         <li><a class="dropdown-item" href="shop-cart.html">Data Science & Analytics</a>
                                         </li>
                                         <li><a class="dropdown-item" href="shop-cart.html">Artificial Intelligence</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="shop-cart.html">Office Managment</a></li>
+                                        <li><a class="dropdown-item" href="shop-cart.html">Office Management</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -167,12 +167,12 @@
                             <span data-bs-toggle="dropdown"></span>
                             <ul class="dropdown-menu">
                                 <li class="dropdown dropend">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Organisations</a>
+                                    <a class="dropdown-item dropdown-toggle" href="#">Organizations</a>
                                     <span data-bs-toggle="dropdown"></span>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">International Organisation</a></li>
-                                        <li><a class="dropdown-item" href="#">Governmental Organisation</a></li>
-                                        <li><a class="dropdown-item" href="#">Private Organisation</a></li>
+                                        <li><a class="dropdown-item" href="#">International Organization</a></li>
+                                        <li><a class="dropdown-item" href="#">Governmental Organization</a></li>
+                                        <li><a class="dropdown-item" href="#">Private Organization</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown dropend">
@@ -328,7 +328,7 @@
                                         <div class="row justify-content-center">
                                             <div class="col-11 col-lg-9">
                                                 <!-- Badge -->
-                                                <a href="#" class="badge text-bg-course-page mb-4 fs-5">Proffesional
+                                                <a href="#" class="badge text-bg-course-page mb-4 fs-5">Professional
                                                     Development</a>
                                                 <!-- Title -->
                                                 <h1 class="h2 mb-4"><a href="blog-single-v1.html"
