still on modification v1

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 </head>
 
 <body>
+
+
+
 	<!-- Header START -->
 	<header class="header-sticky header-absolut prod-header-style">
 		<!-- Logo Nav START -->
@@ -397,6 +400,10 @@
 	</header>
 	<!-- Header END -->
 
+
+
+
+
 	<!-- **************** MAIN CONTENT START **************** -->
 	<main>
 
@@ -547,366 +554,10 @@
 			</div>
 		</section>
 
-		<!-- <style>
-			.hero-slide {
-				min-height: 55vh;
-				padding: 4rem 1rem;
-			}
-		
-			.lh-sm {
-				line-height: 1.2 !important;
-			} -->
-		</style>
-
-		<!-- HERO SECTION END HERE -->
 
 
+		<!-- ======================= Client START -->
 
-		<section class=" py-5 text-center container">
-			<div class="row py-lg-5 my-5 g-4 py-5">
-				<div class="col-lg-6 col-md-8 mx-auto px-5 d-flex  flex-column justify-content-between ">
-					<h3 class="fw-bolder text-center text-md-start pt-3 text-primary-pro">The ProDWex Advantage</h3>
-					<p class="text-body-secondary text-center text-md-start fs-6 px-0 ">ProDWex is transforming
-						professional development and work experience for tertiary students across Nigeria and Africa. By
-						joining ProDWex, you tap into a powerful ecosystem of opportunity: immersive, industry-aligned
-						Training and official Certification programs, hands-on Internship placements through our network
-						of 60,000+ partner organizations, and a continually updated Blog brimming with career insights
-						and best practices.
-					</p>
-					<div class="text-center text-md-start">
-						<button class="rounded-2 btn btn-primary icon-link icon-link-hover">Get Started Today <i
-								class="bi bi-arrow-right"></i></button>
-					</div>
-				</div>
-
-				<div class="col-lg-6 col-md-8 mx-auto ">
-					<img src="./assets/images/bg/add.png" class="shadow-sm card" alt="image">
-				</div>
-			</div>
-		</section>
-
-
-		<section class="py-5 Services"> 
-			<nav class="navbar navbar-expand-xl">
-				<div class="container">
-					<!-- Logo START -->
-					<a class="navbar-brand me-0 py-0" href="index-2.html">
-						<img class="light-mode-item navbar-brand-item" src="assets/images/logo24x100.png" alt="logo"
-							width="20" />
-					</a>
-					<!-- Logo END -->
-
-					<!-- Offcanvas toggler for mobile -->
-					<!-- Desktop Navbar -->
-					<div class="collapse navbar-collapse d-none d-xl-flex" id="navbarCollapse">
-						<ul class="navbar-nav navbar-nav-scroll mx-auto">
-							<!-- Nav Home -->
-							<li class="nav-item">
-								<a class="nav-link active" href="./index.html">Home</a>
-							</li>
-							<!-- Nav item Courses-->
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="./courses.html" id="desktopCoursesDropdown"
-									role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Courses
-								</a>
-								<ul class="dropdown-menu" aria-labelledby="desktopCoursesDropdown">
-									<li><a class="dropdown-item" href="/courses.html">All Categories</a></li>
-									<li class="dropdown dropend">
-										<a class="dropdown-item dropdown-toggle" href="#" id="desktopSubCatDropdown"
-											data-bs-toggle="dropdown" aria-expanded="false">Sub-Categories</a>
-										<ul class="dropdown-menu" aria-labelledby="desktopSubCatDropdown">
-											<li><a class="dropdown-item" href="shop-grid.html">Professonal
-													Development</a></li>
-											<li><a class="dropdown-item" href="#">Information
-													Technology</a></li>
-											<li><a class="dropdown-item" href="#">Designs and
-													Web-Development</a></li>
-											<li><a class="dropdown-item" href="#">Human & Project
-													Managment</a></li>
-											<li><a class="dropdown-item" href="#">Data Science &
-													Analytics</a></li>
-											<li><a class="dropdown-item" href="#">Artificial
-													Intelligence</a></li>
-											<li><a class="dropdown-item" href="#">Office Managment</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<!-- Partners -->
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="./partner.html" id="desktopPartnersDropdown"
-									role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Partners
-								</a>
-								<ul class="dropdown-menu" aria-labelledby="desktopPartnersDropdown">
-									<li class="dropdown dropend">
-										<a class="dropdown-item dropdown-toggle" href="#" id="desktopOrgDropdown"
-											data-bs-toggle="dropdown" aria-expanded="false">Organisations</a>
-										<ul class="dropdown-menu" aria-labelledby="desktopOrgDropdown">
-											<li><a class="dropdown-item" href="#">International Organisation</a></li>
-											<li><a class="dropdown-item" href="#">Governmental Organisation</a></li>
-											<li><a class="dropdown-item" href="#">Private Organisation</a></li>
-										</ul>
-									</li>
-									<li class="dropdown dropend">
-										<a class="dropdown-item dropdown-toggle" href="#" id="desktopInstDropdown"
-											data-bs-toggle="dropdown" aria-expanded="false">Institutions</a>
-										<ul class="dropdown-menu" aria-labelledby="desktopInstDropdown">
-											<li><a class="dropdown-item" href="#">Global Institution</a></li>
-											<li><a class="dropdown-item" href="#">Federal Institution</a></li>
-											<li><a class="dropdown-item" href="#">State Institution</a></li>
-											<li><a class="dropdown-item" href="#">Private Institution</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<!-- Blog & Events -->
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="./blog.html" id="desktopBlogDropdown"
-									role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Blog & Events
-								</a>
-								<ul class="dropdown-menu" aria-labelledby="desktopBlogDropdown">
-									<li><a class="dropdown-item" href="./blog.html">Blogs</a></li>
-									<li><a class="dropdown-item" href="./events.html">Events</a></li>
-								</ul>
-							</li>
-							<!-- Team -->
-							<li class="nav-item">
-								<a class="nav-link" href="./team.html">Team</a>
-							</li>
-						</ul>
-					</div>
-
-					<!-- Offcanvas Mobile Navbar -->
-					<div class="offcanvas offcanvas-start d-xl-none" tabindex="-1" id="mobileNav"
-						aria-labelledby="mobileNavLabel">
-						<div class="offcanvas-header">
-							<h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="offcanvas"
-								aria-label="Close"></button>
-						</div>
-						<div class="offcanvas-body">
-							<ul class="navbar-nav">
-								<!-- Nav Home -->
-								<li class="nav-item">
-									<a class="nav-link active" href="./index.html">Home</a>
-								</li>
-								<!-- Nav item Courses-->
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="./courses.html" id="mobileCoursesDropdown"
-										role="button" data-bs-toggle="dropdown" aria-expanded="false">
-										Courses
-									</a>
-									<ul class="dropdown-menu" aria-labelledby="mobileCoursesDropdown">
-										<li><a class="dropdown-item" href="/courses.html">All Categories</a></li>
-										<li class="dropdown dropend">
-											<a class="dropdown-item dropdown-toggle" href="#" id="mobileSubCatDropdown"
-												data-bs-toggle="dropdown" aria-expanded="false">Sub-Categories</a>
-											<ul class="dropdown-menu" aria-labelledby="mobileSubCatDropdown">
-												<li><a class="dropdown-item" href="shop-grid.html">Professonal
-														Development</a></li>
-												<li><a class="dropdown-item" href="#">Information
-														Technology</a></li>
-												<li><a class="dropdown-item" href="#">Designs and
-														Web-Development</a></li>
-												<li><a class="dropdown-item" href="#">Human & Project
-														Managment</a></li>
-												<li><a class="dropdown-item" href="#">Data Science &
-														Analytics</a></li>
-												<li><a class="dropdown-item" href="#">Artificial
-														Intelligence</a></li>
-												<li><a class="dropdown-item" href="#">Office Managment</a>
-												</li>
-											</ul>
-										</li>
-									</ul>
-								</li>
-								<!-- Partners -->
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="./partner.html"
-										id="mobilePartnersDropdown" role="button" data-bs-toggle="dropdown"
-										aria-expanded="false">
-										Partners
-									</a>
-									<ul class="dropdown-menu" aria-labelledby="mobilePartnersDropdown">
-										<li class="dropdown dropend">
-											<a class="dropdown-item dropdown-toggle" href="#" id="mobileOrgDropdown"
-												data-bs-toggle="dropdown" aria-expanded="false">Organisations</a>
-											<ul class="dropdown-menu" aria-labelledby="mobileOrgDropdown">
-												<li><a class="dropdown-item" href="#">International Organisation</a>
-												</li>
-												<li><a class="dropdown-item" href="#">Governmental Organisation</a></li>
-												<li><a class="dropdown-item" href="#">Private Organisation</a></li>
-											</ul>
-										</li>
-										<li class="dropdown dropend">
-											<a class="dropdown-item dropdown-toggle" href="#" id="mobileInstDropdown"
-												data-bs-toggle="dropdown" aria-expanded="false">Institutions</a>
-											<ul class="dropdown-menu" aria-labelledby="mobileInstDropdown">
-												<li><a class="dropdown-item" href="#">Global Institution</a></li>
-												<li><a class="dropdown-item" href="#">Federal Institution</a></li>
-												<li><a class="dropdown-item" href="#">State Institution</a></li>
-												<li><a class="dropdown-item" href="#">Private Institution</a></li>
-											</ul>
-										</li>
-									</ul>
-								</li>
-								<!-- Blog & Events -->
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="./blog.html" id="mobileBlogDropdown"
-										role="button" data-bs-toggle="dropdown" aria-expanded="false">
-										Blog & Events
-									</a>
-									<ul class="dropdown-menu" aria-labelledby="mobileBlogDropdown">
-										<li><a class="dropdown-item" href="./blog.html">Blogs</a></li>
-										<li><a class="dropdown-item" href="./events.html">Events</a></li>
-									</ul>
-								</li>
-								<!-- Team -->
-								<li class="nav-item">
-									<a class="nav-link" href="./team.html">Team</a>
-								</li>
-								<!-- Register & Login -->
-								<li class="nav-item mt-3">
-									<a href="./signUp.html" class="btn btn-danger w-100 mb-2"><i
-											class="bi bi-person-circle me-1"></i>Register</a>
-									<a href="./signIn.html" class="btn btn-primary w-100"><i
-											class="bi bi-box-arrow-up-right me-1"></i>Member-Login</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<!-- End Offcanvas -->
-				</div>
-			</nav>
-			<!-- ...existing code... -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-			<div class="album">
-				<div class="">
-					<div class="d-flex flex-column  container">
-						<h1 class="fs-3 text-center text-white ">Unlock Your Potential with ProDWex</h1>
-						<p class="text-center  lead py-4 px-5 container inner-container text-white-50">Step into your
-							future
-							with ProDWex. Our hands-on, industry-relevant courses are designed to equip you with real
-							world
-							skills, boost your career potential, and support your entrepreneurial goals.
-						</p>
-					</div>
-
-
-					<div class="contianer-fluid bg-body-tertiary pt-3 ">
-						<div class="container mx-auto row py-4">
-							<!-- Card 1 -->
-							<div class="col-12 col-md-6 col-lg-4 mb-4">
-								<div class="card h-100 shadow-sm card-hover-shadow rounded-4 border-0">
-									<img src="./assets/iimages/courses/crm.jpg" class="card-img-top rounded-top-4"
-										alt="CRM" style="height: 200px; object-fit: cover;" />
-									<div class="card-body d-flex flex-column justify-content-between">
-										<div>
-											<h6 class="card-title fw-semibold">For Partnerships & Internship Programs
-											</h6>
-											<p class="card-text text-muted fd-6">ProDWEx:</p>
-										</div>
-										<div class="d-flex justify-content-between align-items-center mt-3">
-											<div class="btn-group">
-												<button class="btn btn-sm btn-outline-primary">View <i
-														class="bi bi-eye"></i></button>
-												<button class="btn btn-sm btn-danger">Register <i
-														class="bi bi-door-open"></i></button>
-											</div>
-											<small class="text-muted">9 mins</small>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Card 2 -->
-							<div class="col-12 col-md-6 col-lg-4 mb-4">
-								<div class="card h-100 shadow-sm rounded-4 border-0">
-									<img src="./assets/iimages/courses/hrm.jpg" class="card-img-top rounded-top-4"
-										alt="HRM" style="height: 200px; object-fit: cover;" />
-									<div class="card-body d-flex flex-column justify-content-between">
-										<div>
-											<h6 class="card-title fw-semibold">Professional Courses & Certification</h6>
-											<p class="card-text text-muted small">Learn the process of hiring and
-												developing employees so that
-												they become more valuable to the organization.</p>
-										</div>
-										<div class="d-flex justify-content-between align-items-center mt-3">
-											<div class="btn-group">
-												<button class="btn btn-sm btn-outline-primary">View <i
-														class="bi bi-eye"></i></button>
-												<button class="btn btn-sm btn-danger">Register <i
-														class="bi bi-door-open"></i></button>
-											</div>
-											<small class="text-muted">9 mins</small>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Card 3 -->
-							<div class="col-12 col-md-6 col-lg-4 mb-4">
-								<div class="card h-100 shadow-sm rounded-4 border-0">
-									<img src="./assets/iimages/courses/pmp.jpg" class="card-img-top rounded-top-4"
-										alt="PMP" style="height: 200px; object-fit: cover;" />
-									<div class="card-body d-flex flex-column justify-content-between">
-										<div>
-											<h6 class="card-title fw-semibold">Project Management</h6>
-											<p class="card-text text-muted small">Learn to manage projects effectively
-												from initiation to
-												closure, using key tools and techniques to meet goals on time and within
-												budget.</p>
-										</div>
-										<div class="d-flex justify-content-between align-items-center mt-3">
-											<div class="btn-group">
-												<button class="btn btn-sm btn-outline-primary">View <i
-														class="bi bi-eye"></i></button>
-												<button class="btn btn-sm btn-danger">Register <i
-														class="bi bi-door-open"></i></button>
-											</div>
-											<small class="text-muted">9 mins</small>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="text-center pt-5">
-						<h5 class="text-white mb-5 p-0">Explore Full Range of Our Courses</h5>
-						<a href="./courses.html" class="btn btn-lg btn-outline-primary rounded-4 text-white">Explore All
-							Courses <i class="bi bi-arrow-right"></i></a>
-					</div>
-				</div>
-			</div>
-		</section>
-
-
-
-
-
-		<!-- <hr class="border-primary opacity-1 " /> -->
-
-		<!-- =======================
-		Client START -->
 		<section class="pb-0">
 			<div class="container">
 				<div class="row align-items-center">
@@ -995,6 +646,8 @@
 				<!-- Row END -->
 			</div>
 		</section>
+
+
 		<!-- =======================
 		Client END -->
 
@@ -1112,8 +765,11 @@ About START -->
 		<!-- =======================
 About END -->
 
-		<!-- =======================
-<!-- ====================== Team START-->
+
+
+
+
+		<!-- ====================== Team START-->
 		<section class="pb-0">
 			<div class="container">
 				<div class="bg-lightblue">
@@ -1323,8 +979,13 @@ About END -->
 			</div>
 		</section>
 		<!-- ===================== Team END-->
-		<!-- =======================
-Testimonials START -->
+
+
+
+
+
+
+		<!-- ======================= Testimonials START -->
 		<section>
 			<div class="container">
 				<div class="row">
@@ -1587,11 +1248,14 @@ Testimonials START -->
 				</div>
 			</div>
 		</section>
-		<!-- =======================
-Testimonials END -->
+		<!-- ======================= Testimonials END -->
 
-		<!-- =======================
-CTA START -->
+
+
+
+
+
+		<!-- ======================= CTA START -->
 		<section class="position-relative z-index-2 py-0 mb-n7">
 			<div class="container position-relative">
 				<div class="bg-primary rounded position-relative overflow-hidden p-4 p-sm-5">
@@ -1682,13 +1346,13 @@ CTA START -->
 				</div>
 			</div>
 		</section>
-		<!-- =======================
-CTA END -->
+		<!-- ======================= CTA END -->
+
+
 	</main>
 	<!-- **************** MAIN CONTENT END **************** -->
 
-	<!-- =======================
-Footer START -->
+	<!-- ======================= Footer START -->
 	<footer class="prod-footer-style position-relative overflow-hidden pb-0 pt-6 pt-lg-8" data-bs-theme="dark">
 		<!-- SVG decoration -->
 		<figure class="position-absolute top-0 start-0 mt-n8 ms-n9">
@@ -1887,8 +1551,7 @@ Footer START -->
 			</div>
 		</div>
 	</footer>
-	<!-- =======================
-Footer END -->
+	<!-- =======================Footer END -->
 
 	<!-- Back to top -->
 	<div class="back-top"></div>
