--- a/index.html
+++ b/index.html
@@ -556,6 +556,133 @@
 
 
 
+		<section class="py-0 my-0 text-center container card ">
+			<div class="row justify-content-between align-content-center p-0 my-6 g-4">
+
+				<div class="col-lg-6 col-md-8  ">
+					<img src="./assets/images/bg/add.png" class="shadow-sm card-img" alt="image" height="60px"
+						style=" width: 100%; height: 60vh; object-fit: cover;" />
+				</div>
+
+				<div class="col-lg-6 col-md-8 mx-auto">
+					<h3 class="fw-bolder text-center text-md-start text-primary-pro">The ProDWex Advantage</h3>
+					<p class="text-body-secondary text-center text-md-start m-0 pt-4">Elevate your career with ProDWex, Africa’s leading professional development platform for tertiary students. Access
+					immersive, industry‑aligned training and accredited certifications that sharpen in‑demand skills. Leverage our
+					partnerships with 60,000+ organizations to secure hands‑on internships, and gain a competitive edge through expert
+					insights on our dynamic blog. Join ProDWex today and transform your potential into real-world success.
+					</p>
+					<div class="text-center text-md-start pt-4">
+						<button class="rounded-2 btn btn-primary icon-link icon-link-hover">Get Started Today <i
+								class="bi bi-arrow-right"></i></button>
+					</div>
+				</div>
+		
+				
+			</div>
+		</section>
+		
+		
+		<section class="py-5 Services">
+			<div class="album">
+				<div class="">
+					<div class="d-flex flex-column  container">
+						<h1 class="fs-3 text-center text-white ">Unlock Your Potential with ProDWex</h1>
+						<p class="text-center py-4 px-5 container inner-container text-white-50">Step into your future
+							with ProDWex. Our hands-on, industry-relevant courses are designed to equip you with real
+							world
+							skills, boost your career potential, and support your entrepreneurial goals.
+						</p>
+					</div>
+		
+		
+					<div class="contianer-fluid bg-body-tertiary pt-3 ">
+						<div class="container mx-auto row py-4">
+							<!-- Card 1 -->
+							<div class="col-12 col-md-6 col-lg-4 mb-4  ">
+								<div class="card h-100 shadow-sm  scale-hover rounded-4 border-0">
+									<img src="./assets/iimages/courses/crm.jpg" class="card-img-top rounded-top-4" alt="CRM"
+										style="height: 200px; object-fit: cover;" />
+									<div class="card-body d-flex flex-column justify-content-between">
+										<div>
+											<h6 class="card-title fw-semibold">Customer Relatioship Management</h6>
+											<p class="card-text text-muted fd-6">Learn the practices, strategies and technologies to improve customer acquisition, retention, profitability and loyalty</p>
+									</div>
+										<div class="d-flex justify-content-between align-items-center mt-3">
+											<div class="btn-group">
+												<button class="btn btn-sm btn-outline-primary">View <i
+														class="bi bi-eye"></i></button>
+												<button class="btn btn-sm btn-danger">Register <i
+														class="bi bi-door-open"></i></button>
+											</div>
+											<small class="text-muted">9 mins</small>
+										</div>
+									</div>
+								</div>
+							</div>
+		
+							<!-- Card 2 -->
+							<div class="col-12 col-md-6 col-lg-4 mb-4  ">
+								<div class="card h-100 shadow-sm scale-hover rounded-4 border-0">
+									<img src="./assets/iimages/courses/hrm.jpg" class="card-img-top rounded-top-4" alt="HRM"
+										style="height: 200px; object-fit: cover;" />
+									<div class="card-body d-flex flex-column justify-content-between">
+										<div>
+											<h6 class="card-title fw-semibold">Professional Courses & Certification</h6>
+											<p class="card-text text-muted small">Learn the process of hiring and developing
+												employees so that
+												they become more valuable to the organization.</p>
+										</div>
+										<div class="d-flex justify-content-between align-items-center mt-3">
+											<div class="btn-group">
+												<button class="btn btn-sm btn-outline-primary">View <i
+														class="bi bi-eye"></i></button>
+												<button class="btn btn-sm btn-danger">Register <i
+														class="bi bi-door-open"></i></button>
+											</div>
+											<small class="text-muted">9 mins</small>
+										</div>
+									</div>
+								</div>
+							</div>
+		
+							<!-- Card 3 -->
+							<div class="col-12 col-md-6 col-lg-4 mb-4  ">
+								<div class="card h-100 shadow-sm scale-hover rounded-4 border-0">
+									<img src="./assets/iimages/courses/pmp.jpg" class="card-img-top rounded-top-4" alt="PMP"
+										style="height: 200px; object-fit: cover;" />
+									<div class="card-body d-flex flex-column justify-content-between">
+										<div>
+											<h6 class="card-title fw-semibold">Project Management</h6>
+											<p class="card-text text-muted small">Learn to manage projects effectively from
+												initiation to
+												closure, using key tools and techniques to meet goals on time and within budget.
+											</p>
+										</div>
+										<div class="d-flex justify-content-between align-items-center mt-3">
+											<div class="btn-group">
+												<button class="btn btn-sm btn-outline-primary">View <i
+														class="bi bi-eye"></i></button>
+												<button class="btn btn-sm btn-danger">Register <i
+														class="bi bi-door-open"></i></button>
+											</div>
+											<small class="text-muted">9 mins</small>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+		
+					</div>
+					<div class="text-center pt-5">
+						<h5 class="text-white mb-5 p-0">Explore Full Range of Our Courses</h5>
+						<a href="./courses.html" class="btn btn-lg btn-outline-primary rounded-4 text-white">Explore All Courses
+							<i class="bi bi-arrow-right"></i></a>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+
 		<!-- ======================= Client START -->
 
 		<section class="pb-0">
