Hero images added

--- a/index.html
+++ b/index.html
@@ -409,13 +409,12 @@
 
 		<!-- HERO SECTION START HERE -->
 		<section class="p-0 my-0">
-			<!-- Bootstrap Carousel START -->
 			<div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<!-- Slide 1 START -->
 					<div class="carousel-item active">
 						<div class="hero-slide d-flex align-items-center text-white py-6"
-							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.671)), url(./assets/images/bg/09.jpg) no-repeat center center/cover;">
+							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.89)), url(./assets/images/bg/09.jpg) no-repeat center center/cover;">
 							<div class="container">
 								<div class="row align-items-center">
 									<div class="col-md-6 text-center text-md-start">
@@ -428,10 +427,10 @@
 											<a class="btn btn-danger btn-lg" href="#">Register Now <i
 													class="bi bi-arrow-right"></i></a>
 									</div>
-									<!-- <div class="col-md-6 d-none d-md-block">
-										<img src="./assets/images/hero/Professional-dev.png" alt="Professional Development"
+									<div class="col-md-6 d-none d-md-block">
+										<img src="https://i.pinimg.com/736x/b3/33/48/b33348c363142029f846acbfd54f9158.jpg" alt="Professional Development"
 											class="img-fluid my-5" loading="lazy">
-									</div> -->
+									</div>
 								</div>
 							</div>
 						</div>
@@ -440,7 +439,7 @@
 					<!-- Slide 2 -->
 					<div class="carousel-item">
 						<div class="hero-slide d-flex align-items-center text-white py-6"
-							style="background: linear-gradient(to right, rgba(0, 0, 0, 0.904), rgba(0,0,0,0.671)), url(./assets/images/bg/02.jpg) no-repeat center center/cover;">
+							style="background: linear-gradient(to right, rgba(0, 0, 0, 0.904), rgba(0,0,0,0.89)), url(./assets/images/bg/02.jpg) no-repeat center center/cover;">
 							<div class="container">
 								<div class="row align-items-center">
 									<div class="col-md-6 text-center text-md-start">
@@ -451,9 +450,9 @@
 											<a class="btn btn-danger btn-lg" href="#">Explore Courses <i
 													class="bi bi-arrow-right"></i></a>
 									</div>
-									<!-- <div class="col-md-6 d-none d-md-block">
-										<img src="./assets/images/hero/tech-training.png" alt="Tech Training" class="img-fluid my-5" loading="lazy">
-									</div> -->
+									<div class="col-md-6 d-none d-md-block">
+										<img src="https://i.pinimg.com/736x/84/09/bb/8409bbf895cdb833ff47ded8f63a007f.jpg" alt="Tech Training" class="img-fluid my-5" loading="lazy">
+									</div>
 								</div>
 							</div>
 						</div>
@@ -462,20 +461,20 @@
 					<!-- Slide 3 -->
 					<div class="carousel-item">
 						<div class="hero-slide d-flex align-items-center text-white py-6"
-							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.671)), url(assets/images/bg/03.jpg) no-repeat center center/cover;">
+							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.89)), url(assets/images/bg/03.jpg) no-repeat center center/cover;">
 							<div class="container">
 								<div class="row align-items-center">
 									<div class="col-md-6 text-center text-md-start">
 										<p class="text-uppercase small text-secondary">MENTORSHIP</p>
 										<h3 class="mb-3 fs-2 text-white"">Guiding You to Career Success</h1>
-										<p class=" mb-4">Connect with industry experts to gain insight and direction for
+										<p class=" mb-4 text-secondary">Connect with industry experts to gain insight and direction for
 											your career journey.</p>
 											<a class="btn btn-danger btn-lg" href="#">Meet Our Mentors <i
 													class="bi bi-arrow-right"></i></a>
 									</div>
-									<!-- <div class="col-md-6 d-none d-md-block">
-										<img src="./assets/images/hero/guiding-your -career.jpeg" alt="Mentorship" class="img-fluid my-5" loading="lazy">
-									</div> -->
+									<div class="col-md-6 d-none d-md-block">
+										<img src="https://i.pinimg.com/736x/03/ff/96/03ff9675b059ca1354c1b0c1e98f2abb.jpg" alt="Mentorship" class="img-fluid my-5" loading="lazy">
+									</div>
 								</div>
 							</div>
 						</div>
@@ -484,7 +483,7 @@
 					<!-- Slide 4 -->
 					<div class="carousel-item">
 						<div class="hero-slide d-flex align-items-center text-white py-6"
-							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.671)), url(assets/images/bg/04.jpg) no-repeat center center/cover;">
+							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.89)), url(assets/images/bg/04.jpg) no-repeat center center/cover;">
 							<div class="container">
 								<div class="row align-items-center">
 									<div class="col-md-6 text-center text-md-start">
@@ -495,10 +494,10 @@
 											<a class="btn btn-danger btn-lg" href="#">Start Now <i
 													class="bi bi-arrow-right"></i></a>
 									</div>
-									<!-- <div class="col-md-6 d-none d-md-block">
-										<img src="./assets/images/hero/real-project.jpeg" alt="Work Experience"
+									<div class="col-md-6 d-none d-md-block">
+										<img src="https://i.pinimg.com/736x/35/c1/36/35c13613687db448881346ce7579947e.jpg" alt="Work Experience"
 											class="img-fluid my-5" loading="lazy">
-									</div> -->
+									</div>
 								</div>
 							</div>
 						</div>
@@ -507,7 +506,7 @@
 					<!-- Slide 5 -->
 					<div class="carousel-item">
 						<div class="hero-slide d-flex align-items-center text-white py-6"
-							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0,0,0,0.671)), url(assets/images/bg/05.jpg) no-repeat center center/cover;">
+							style="background: linear-gradient(to right, rgba(0,0,0), rgba(0, 0, 0, 0.89)), url(assets/images/bg/05.jpg) no-repeat center center/cover;">
 							<div class="container">
 								<div class="row align-items-center">
 									<div class="col-md-6 text-center text-md-start">
@@ -518,10 +517,10 @@
 											<a class="btn btn-danger btn-lg" href="#">Join Us <i
 													class="bi bi-arrow-right"></i></a>
 									</div>
-									<!-- <div class="col-md-6 d-none d-md-block">
-										<img src="./assets/images/hero/team.jpeg" alt="Community Impact"
+									<div class="col-md-6 d-none d-md-block">
+										<img src="https://i.pinimg.com/736x/7e/d6/5a/7ed65a934c44e7486ba52a5c813b45b8.jpg" alt="Community Impact"
 											class="img-fluid my-5" loading="lazy">
-									</div> -->
+									</div>
 								</div>
 							</div>
 						</div>
@@ -692,7 +691,7 @@
 					<div class="col-sm-6 col-lg-3 mt-2">
 						<div class="card card-body small shadow-sm scale-hover">
 							<!-- Icon -->
-							<figure class="text-primary mb-3 flex-shrink-0">
+							<figure class="text-primary mb-3 flex-shrink-0 rounded-5 border-5">
 								<!-- Training Icon: Person Teaching at a Board -->
 								<svg width="50" height="50" viewBox="0 0 24 24" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -711,6 +710,7 @@
 										stroke-linecap="round" />
 								</svg>
 							</figure>
+
 							<h6>Training</h6>
 							<p class="mb-0">
 								Training equips students with practical skills for real-world success.
