working on the institutions section

--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
 													class="bi bi-arrow-right"></i></a>
 									</div>
 									<div class="col-md-6 d-none d-md-block">
-										<img src="https://i.pinimg.com/736x/b3/33/48/b33348c363142029f846acbfd54f9158.jpg" alt="Professional Development"
-											class="img-fluid my-5" loading="lazy">
+										<img src="https://i.pinimg.com/736x/b3/33/48/b33348c363142029f846acbfd54f9158.jpg"
+											alt="Professional Development" class="img-fluid my-5" loading="lazy">
 									</div>
 								</div>
 							</div>
@@ -451,7 +451,8 @@
 													class="bi bi-arrow-right"></i></a>
 									</div>
 									<div class="col-md-6 d-none d-md-block">
-										<img src="https://i.pinimg.com/736x/84/09/bb/8409bbf895cdb833ff47ded8f63a007f.jpg" alt="Tech Training" class="img-fluid my-5" loading="lazy">
+										<img src="https://i.pinimg.com/736x/84/09/bb/8409bbf895cdb833ff47ded8f63a007f.jpg"
+											alt="Tech Training" class="img-fluid my-5" loading="lazy">
 									</div>
 								</div>
 							</div>
@@ -473,7 +474,8 @@
 													class="bi bi-arrow-right"></i></a>
 									</div>
 									<div class="col-md-6 d-none d-md-block">
-										<img src="https://i.pinimg.com/736x/03/ff/96/03ff9675b059ca1354c1b0c1e98f2abb.jpg" alt="Mentorship" class="img-fluid my-5" loading="lazy">
+										<img src="https://i.pinimg.com/736x/03/ff/96/03ff9675b059ca1354c1b0c1e98f2abb.jpg"
+											alt="Mentorship" class="img-fluid my-5" loading="lazy">
 									</div>
 								</div>
 							</div>
@@ -495,8 +497,8 @@
 													class="bi bi-arrow-right"></i></a>
 									</div>
 									<div class="col-md-6 d-none d-md-block">
-										<img src="https://i.pinimg.com/736x/35/c1/36/35c13613687db448881346ce7579947e.jpg" alt="Work Experience"
-											class="img-fluid my-5" loading="lazy">
+										<img src="https://i.pinimg.com/736x/35/c1/36/35c13613687db448881346ce7579947e.jpg"
+											alt="Work Experience" class="img-fluid my-5" loading="lazy">
 									</div>
 								</div>
 							</div>
@@ -518,8 +520,8 @@
 													class="bi bi-arrow-right"></i></a>
 									</div>
 									<div class="col-md-6 d-none d-md-block">
-										<img src="https://i.pinimg.com/736x/7e/d6/5a/7ed65a934c44e7486ba52a5c813b45b8.jpg" alt="Community Impact"
-											class="img-fluid my-5" loading="lazy">
+										<img src="https://i.pinimg.com/736x/7e/d6/5a/7ed65a934c44e7486ba52a5c813b45b8.jpg"
+											alt="Community Impact" class="img-fluid my-5" loading="lazy">
 									</div>
 								</div>
 							</div>
@@ -584,13 +586,14 @@
 			</div>
 		</section>
 
-<hr>
+		<hr>
 
 		<section class="py-2 mb-5">
 			<div class="container">
 				<div class="row flex-row-reverse g-4 bg-white p-5 align-items-center">
 					<h3 class="mb-4 pe-2 text-center text-lg-start">
-						<span class="text-primary">Launch Your Career with Industry-Ready </span><br/> Skills & Connections
+						<span class="text-primary">Launch Your Career with Industry-Ready </span><br />  <span class="text-primary-pro" >Skills &
+						Connections </span>
 					</h3>
 					<!-- Content -->
 					<div class="col-lg-6 ps-md-5 card bg-transparent  ">
@@ -634,7 +637,7 @@
 
 					<!-- Vector Illustration SVG -->
 					<div class="col-lg-6 position-relative d-flex  align-items-center justify-content-center">
-						
+
 
 						<!-- SVG decoration -->
 						<figure class="position-absolute top-0 start-0 mt-n6 ms-n5 z-index-1 opacity-4 text-danger">
@@ -676,7 +679,8 @@
 								class="rounded bg-danger text-white shadow-sm p-1 position-absolute  start-70 end-0 bottom-0 z-index-1  smaller ">😲🥰Join
 								us now ➡</span>
 							<span
-								class="rounded bg-danger text-white shadow-sm p-1 position-absolute  start-70 end-0 bottom-10 z-index-1  smaller ">📖🤔Looking for Professional Courses⁉</span>
+								class="rounded bg-danger text-white shadow-sm p-1 position-absolute  start-70 end-0 bottom-10 z-index-1  smaller ">📖🤔Looking
+								for Professional Courses⁉</span>
 							<img src="https://i.pinimg.com/736x/54/96/ef/5496ef19c9616783bffb2cb4b0edd4cc.jpg"
 								class="rounded position-relative" alt="about-img" loading="lazy" />
 						</div>
@@ -797,6 +801,171 @@
 					</div>
 				</div>
 				<!-- Value END -->
+			</div>
+		</section>
+
+		<section class="bg-body-secondar py-6">
+			<div class="container">
+				<div class=" text-start mb-4 mb-sm-6">
+					<h2 class=" p-0 fs-3 text-center text-primary-pro w-75 mx-auto"><span class="text-primary-pro fw-bolder">Pro<span class="text-danger" >DWEx</span>&nbsp;</span>Member Institutions</h2>
+					<p class="mb-0 p-0 text-center pb-7">ProDWEx now has Members in 154 Institutions</p>
+				</div>
+			
+				<!-- Institution item START 1 -->
+				<div class="row g-2 g-lg-3 mx-auto">
+					<!-- Item -->
+					<div class="col-lg-3 col-sm-6 ">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/aace.jpg" alt="" srcset="" width="35px" height="40px">
+								</div>
+								<div  class="pt-2" >
+									<h6>AAUA</h6>
+									<p class="inst-fullname">Adekunle Ajasin University</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+					<!-- Item -->
+
+					<div class="col-md-3 col-sm-6 ">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/oau.jpg" alt="" srcset="" width="35px" height="40px">
+								</div>
+								<div class="pt-2" >
+									<h6>OAU</h6>
+									<p class="inst-fullname">Obafemi Awolowo University</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+					<!-- Item -->
+					<div class="col-md-3 col-sm-6">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/absp.jpg" alt="" srcset="" width="35px" height="40px">
+								</div>
+								<div class="pt-2" >
+									<h6>ABSPOLY</h6>
+									<p class="inst-fullname">Abia State Polytechnic</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+					<!-- Item -->
+					<div class="col-md-3 col-sm-6">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/aope.jpg" alt="" srcset="" width="35px" height="40px">
+								</div>
+								<div class="pt-2" >
+									<h6>AOPE</h6>
+									<p class="inst-fullname">Adeseun Ogundoyin Polytechnic</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+				</div>
+			
+			
+				<!-- Institution item START 2 -->
+				<div class="row g-2 g-lg-3 py-2">
+					<!-- Item -->
+					<div class="col-md-3 col-sm-6 ">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/abuad.jpg" alt="" srcset="" width="30px" height="10px">
+								</div>
+								<div>
+									<h6>ABUAD</h6>
+									<p class="inst-fullname">Afe Babalola University</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+					<!-- Item -->
+					<div class="col-md-3 col-sm-6 ">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/bowen.jpg" alt="" srcset="" width="35px" height="40px">
+								</div>
+								<div>
+									<h6>BOWEN</h6>
+									<p class="inst-fullname">Bowen University</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+					<!-- Item -->
+					<div class="col-md-3 col-sm-6 ">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/cu.jpg" alt="" srcset="" width="35px" height="40px">
+								</div>
+								<div>
+									<h6>CU</h6>
+									<p class="inst-fullname">Covenant University</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+					<!-- Item -->
+					<div class="col-md-3 col-sm-6 ">
+						<div class="card card-body border py-1  ">
+							<div class="d-flex gap-3">
+								<div class="icon-lg icon-md  py-2text-primary mb-3">
+									<img src="./assets/iimages/institutions/eksu.jpg" alt="" srcset="" width="30px" height="40px">
+								</div>
+								<div>
+									<h6>EKSU</h6>
+									<p class="inst-fullname">Ekiti State University</p>
+								</div>
+							</div>
+			
+						</div>
+					</div>
+			
+			
+				</div>
+			
+			
+			
+				<div class="card-footer mt-auto pt-7 text-end">
+					<button class="btn btn-outline-primary">
+						<a class="icon-link" href="./partner.html">click here more institutions....<i class="bi bi-arrow-right"></i> </a>
+					</button>
+				</div>
+			
+				<!-- Feature item END -->
 			</div>
 		</section>
 
@@ -1123,7 +1292,7 @@ About END -->
 		<!-- ====================== Team START-->
 		<section class="pb-0">
 			<div class="container">
-				<div class="bg-lightblue">
+				<div class="">
 					<!-- Title -->
 					<h2 class="text-center mb-4 mb-sm-5">Our Team & Leadership</h2>
 
